--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventUs</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +14,7 @@
       <div class="large-12 columns">
         <div class="header">
           <a href="http://edgardoa.github.io/EventApp/"> 
-            <img src="https://github.com/EdgardoA/EventApp/tree/gh-pages/img/EventUs-Logo.gif">
+            <img src="http://github.com/EdgardoA/EventApp/tree/gh-pages/img/EventUs-Logo.gif">
           </a>
         </div>
       </div>
