--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="large-12 columns">
         <div class="header">
           <a href="http://edgardoa.github.io/EventApp/"> 
-            <img src="http://github.com/EdgardoA/EventApp/blob/gh-pages/img/EventUs-Logo.gif">
+            <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-Logo.gif">
           </a>
         </div>
       </div>
