--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   </head>
   <body>
     
-    <div class="row">
-      <div class="header">
-        <a href="http://edgardoa.github.io/EventApp/"> 
-          <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-Logo.gif">
-        </a>
-      </div>
+    <div class="row header">
+      <a href="http://edgardoa.github.io/EventApp/"> 
+        <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-Logo.gif">
+      </a>
     </div>
     
     <div class="row">
