--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     
-    <div class="row header">
+    <div class="header">
       <a href="http://edgardoa.github.io/EventApp/"> 
         <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-Logo.gif">
       </a>
