--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <a href="http://edgardoa.github.io/EventApp/"> 
         <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-Logo.gif">
       </a>
+      <div class="nav-menu">
+        <ul id="nav-buttons">
+          <li><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
+          <li><a href="http://edgardoa.github.io/EventApp/About">About</a></li>
+          <li><a href="http://edgardoa.github.io/EventApp/SignIn">Sign In</a></li>
+        </ul>
+      </div>
     </div>
     
     <div class="row">
