--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </a>
       <div class="nav-menu">
         <ul class="nav-buttons">
-          <li><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
-          <li><a href="http://edgardoa.github.io/EventApp/About">About</a></li>
-          <li><a href="http://edgardoa.github.io/EventApp/SignIn">Sign In</a></li>
+          <li class="home-button"><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
+          <li class="about-button"><a href="http://edgardoa.github.io/EventApp/About">About</a></li>
+          <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/SignIn">Sign In</a></li>
         </ul>
       </div>
     </div>
