--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="row">
       <div class="large-12 columns">
       	<div class="panel">
-	        <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-	        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-	        <p>Once you've exhausted the fun in this document, you should check out:</p>
+	        <h3>Get Ready To Host The Best Event EVER</h3>
+	        <p>Your one stop site made to make you the greatest event host around.</p>
+          <p>Create an event, invite your friends, ask for donations, set entry fees. Everything you need, without the hassel.</p>
 	        <div class="row">
 	        	<div class="large-4 medium-4 columns">
 	    		<p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
