--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
           <p>Create an event, invite your friends, ask for donations, set entry fees. Everything you need, without the hassel.</p>
 	        <div class="row">
 	        	<div class="large-4 medium-4 columns">
-	    		<p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
+	    		<h2>Create An Event</h2>
+          <p>Set the time, date, and location of your event. You even have the option to display a Google map to your event so your guests have no excuse not to come!</p>
 	    	</div>
 	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
+	        		<h2>Invite Your Friends</h2>
+              <p>You are in charge. Invite everyone you know, or a select few people. Don't want to invite someone but worried about hurting their feelings? No problem! Keep invites secret and they'll never know!</p>
 	        	</div>
 	        	<div class="large-4 medium-4 columns">
-	        		<p><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</p>
+	        		<h2>Set Ticket Prices</h2>
+              <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
 	        	</div>        
 					</div>
       	</div>
