--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
       	<div class="panel">
 	        <h3>Get Ready To Host The Best Event EVER</h3>
 	        <p>Your one stop site made to make you the greatest event host around.</p>
-          <p>Create an event, invite your friends, ask for donations, set entry fees. Everything you need, without the hassel.</p>
 	        <div class="row">
 	        	<div class="large-4 medium-4 columns">
-	    		<h2>Create An Event</h2>
+	    		<h4 class="info-header">Create An Event</h4>
           <p>Set the time, date, and location of your event. You even have the option to display a Google map to your event so your guests have no excuse not to come!</p>
 	    	</div>
 	        	<div class="large-4 medium-4 columns">
-	        		<h2>Invite Your Friends</h2>
+	        		<h4 class="info-header">Invite Your Friends</h4>
               <p>You are in charge. Invite everyone you know, or a select few people. Don't want to invite someone but worried about hurting their feelings? No problem! Keep invites secret and they'll never know!</p>
 	        	</div>
 	        	<div class="large-4 medium-4 columns">
-	        		<h2>Set Ticket Prices</h2>
+	        		<h4 class="info-header">Set Ticket Prices</h4>
               <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
 	        	</div>        
 					</div>
