--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="nav-buttons">
           <li class="home-button"><a href=#>Home</a></li>
           <li class="about-button"><a href="http://edgardoa.github.io/EventApp/About">About</a></li>
-          <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/SignIn">Sign In</a></li>
+          <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
         </ul>
       </div>
     </div>
