--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="large-12 columns">
       	<div class="panel">
 	        <h2>Get Ready To Host The Best Event EVER</h2>
-	        <p>Your one stop site made to make you the greatest event host around.</p>
+	        <p>Your one stop site made to make you the greatest event host around.</p><br/>
 	        <div class="row">
 	        	<div class="large-4 medium-4 columns">
-	    		<h4 class="info-header">Create An Event</h4>
-          <p>Set the time, date, and location of your event. You even have the option to display a Google map to your event so your guests have no excuse not to come!</p>
-	    	</div>
+	    		   <h4 class="info-header">Create An Event</h4>
+             <p>Set the time, date, and location of your event. You even have the option to display a Google map to your event so your guests have no excuse not to come!</p>
+	    	    </div>
 	        	<div class="large-4 medium-4 columns">
 	        		<h4 class="info-header">Invite Your Friends</h4>
               <p>You are in charge. Invite everyone you know, or a select few people. Don't want to invite someone but worried about hurting their feelings? No problem! Keep invites secret and they'll never know!</p>
@@ -40,7 +40,8 @@
 	        	<div class="large-4 medium-4 columns">
 	        		<h4 class="info-header">Set Ticket Prices</h4>
               <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
-	        	</div>        
+	        	</div> 
+             <a href="http://edgardoa.github.io/EventApp/signIn" class="small radius button">Sign In</a><br/>       
 					</div>
       	</div>
       </div>
@@ -154,7 +155,6 @@
       <div class="large-4 medium-4 columns">
 			  <h5>Try one of these buttons:</h5>
 			  <p><a href="#" class="small button">Simple Button</a><br/>
-        <a href="#" class="small radius button">Radius Button</a><br/>
         <a href="#" class="small round button">Round Button</a><br/>            
         <a href="#" class="medium success button">Success Btn</a><br/>
         <a href="#" class="medium alert button">Alert Btn</a><br/>
