submit payment button

--- a/payment.html
+++ b/payment.html
@@ -77,7 +77,7 @@
 				</div>
 
 				<div class="small-6 columns">
-					<input type="submit" value="Submit" class="button postfix">
+					<a href="http://edgardoa.github.io/EventApp/" class="small-6 button">Submit Payment</a>
 				</div>
 			</div>
 		</form>
