New Logo In Sign In Page - Payment

--- a/payment.html
+++ b/payment.html
@@ -14,7 +14,7 @@
     
     <div class="header">
       <a href="http://edgardoa.github.io/EventApp/"> 
-        <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-Logo.gif">
+        <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
       </a>
       <div class="nav-menu">
         <ul class="nav-buttons">
