--- a/signIn.html
+++ b/signIn.html
@@ -9,6 +9,33 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1559183314318460',
+          xfbml      : true,
+          version    : 'v2.1'
+        });
+      };
+
+      FB.getLoginStatus(function(response) {
+  if (response.status === 'connected') {
+    console.log('Logged in.');
+  }
+  else {
+    FB.login();
+  }
+});
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
     
     <div class="header">
       <a href="http://edgardoa.github.io/EventApp/"> 
