--- a/signIn.html
+++ b/signIn.html
@@ -49,7 +49,19 @@
         </ul>
       </div>
     </div>
-
+	
+	<span id="signinButton">
+  	<span
+    class="g-signin"
+    data-callback="signinCallback"
+    data-clientid="CLIENT_ID"
+    data-cookiepolicy="single_host_origin"
+    data-requestvisibleactions="http://schema.org/AddAction"
+    data-scope="https://www.googleapis.com/auth/plus.login">
+  	</span>
+	</span>
+	
+	<script src="https://apis.google.com/js/client:platform.js" async defer></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script> $(document).foundation() </script>
