--- a/signIn.html
+++ b/signIn.html
@@ -13,7 +13,7 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : '1559183314318460',
+          appId      : 1559183314318460 ,
           xfbml      : true,
           version    : 'v2.1'
         });
