--- a/signIn.html
+++ b/signIn.html
@@ -50,16 +50,25 @@
       </div>
     </div>
 	
-	<span id="signinButton">
-  	<span
-    class="g-signin"
-    data-callback="signinCallback"
-    data-clientid="CLIENT_ID"
-    data-cookiepolicy="single_host_origin"
-    data-requestvisibleactions="http://schema.org/AddAction"
-    data-scope="https://www.googleapis.com/auth/plus.login">
-  	</span>
-	</span>
+	<div class="row">
+      <div class="large-12 columns">
+      	<div class="panel">
+	        <p>Log in via Google.</p><br/>
+		<span id="signinButton">
+  		<span
+    	class="g-signin"
+    	data-callback="signinCallback"
+    	data-clientid="CLIENT_ID"
+    	data-cookiepolicy="single_host_origin"
+    	data-requestvisibleactions="http://schema.org/AddAction"
+    	data-scope="https://www.googleapis.com/auth/plus.login">
+  		</span>
+		</span>
+      	</div>
+      </div>
+    </div>
+    
+
 	
 	<script src="https://apis.google.com/js/client:platform.js" async defer></script>
     <script src="js/vendor/jquery.js"></script>
