--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
               <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
 	        	</div> 
              <a href="http://edgardoa.github.io/EventApp/signIn" class="small radius button">Sign In</a>     
+             		<span id="signinButton">
+  		<span
+    	class="g-signin"
+    	data-callback="signinCallback"
+    	data-clientid="CLIENT_ID"
+    	data-cookiepolicy="single_host_origin"
+    	data-requestvisibleactions="http://schema.org/AddAction"
+    	data-scope="https://www.googleapis.com/auth/plus.login">
+  		</span>
+		</span>
+
 					</div>
       	</div>
       </div>
