test_google sign in home _v2

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-             		<span id="signinButton">
+        <span id="signinButton">
   		<span
     	class="g-signin"
     	data-callback="signinCallback"
@@ -177,7 +177,8 @@
         </div>
       </div>
     </div>
-    
+    	<script src="https://apis.google.com/js/client:platform.js" async defer></script>
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
