Image on Sign In
Hopefully I don't break this with all the same time commits :)

--- a/signIn.html
+++ b/signIn.html
@@ -41,6 +41,9 @@
       </div>
     </div>
 
+	<div class="boxed">
+			This text is enclosed in a box.
+	/div>
 
   <script>
   // This is called with the results from from FB.getLoginStatus().
