--- a/signIn.html
+++ b/signIn.html
@@ -43,7 +43,7 @@
 
 	<div class="boxed">
 			This text is enclosed in a box.
-	div>
+	<div>
 
   <script>
   // This is called with the results from from FB.getLoginStatus().
