--- a/signIn.html
+++ b/signIn.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-	<div class="boxed">
+	<div class="boxed" style = " width:300px;height:300px" >
 			This text is enclosed in a box.
 	<div>
 
