--- a/signIn.html
+++ b/signIn.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-	<div class="boxed" style = " width:1000px;height:500px" >
+	<div class="boxed" style = " width:1100px; height:500px;  position: absolute; bottom: 30px " >
 	<div>
 
   <script>
