--- a/signIn.html
+++ b/signIn.html
@@ -130,9 +130,15 @@
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
 -->
-
+<div class="row">
+      <div class="large-12 columns">
+        <div class="panel">
+          <p>Log in via Google.</p><br/>
 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
+        </div>
+      </div>
+    </div>
 
 <div id="status">
 </div>
