--- a/signIn.html
+++ b/signIn.html
@@ -42,7 +42,7 @@
     </div>
 
 	<div class="boxed" style = " width:1028px; height:500px;  position: absolute; bottom: 30px " >
-	<div>
+	</div>
 
   <script>
   // This is called with the results from from FB.getLoginStatus().
