--- a/signIn.html
+++ b/signIn.html
@@ -38,7 +38,7 @@
   		</span>
 		</span>
     
-    <p>Log in via Facebook.</p><br/>
+    <p>Log in via Facebook.</p>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
