--- a/signIn.html
+++ b/signIn.html
@@ -27,7 +27,8 @@
       <div class="large-12 columns">
       	<div class="panel">
 	        <p>Log in via Google.</p><br/>
-		<span id="signinButton">
+		
+    <span id="signinButton">
   		<span
     	class="g-signin"
     	data-callback="signinCallback"
@@ -39,16 +40,19 @@
 		</span>
     
     <p>Log in via Facebook.</p>
-    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
 
-<div id="status">
-</div>
-      	</div>
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+    </fb:login-button>
+
+      <div id="status">
+      </div>
+
       </div>
     </div>
+  </div>
 
-
+  <div class="boxed" style = " width:1028px; height:500px;  position: absolute; bottom: 30px " >
+  </div>
 
   <script>
   // This is called with the results from from FB.getLoginStatus().
