--- a/signIn.html
+++ b/signIn.html
@@ -26,7 +26,7 @@
 	<div class="row">
       <div class="large-12 columns">
       	<div class="panel">
-	        <p>Log in via Google.</p><br/>
+	        <p>Log in via Google.</p>
 		
     <span id="signinButton">
   		<span
