--- a/signIn.html
+++ b/signIn.html
@@ -160,6 +160,8 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
+<a href="create.html" class="small button">Create</a>
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script> $(document).foundation() </script>
