--- a/signIn.html
+++ b/signIn.html
@@ -160,7 +160,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<a href="user.html" class="small button">Create</a>
+<a href="user.html" class="small button">User</a>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
