--- a/view.html
+++ b/view.html
@@ -71,10 +71,17 @@
 				<input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
 			</div>
 			
-			<div class="range-slider" data-slider data-options="step: 20;">
-  				<span class="range-slider-handle" role="slider" tabindex="0"></span>
-  				<span class="range-slider-active-segment"></span>
-  				<input type="hidden">
+			
+			<div class="row">
+  				<div class="small-10 medium-11 columns">
+    			<div class="range-slider" data-slider data-options="display_selector: #sliderOutput3; step: 5;">
+      				<span class="range-slider-handle" role="slider" tabindex="0"></span>
+      				<span class="range-slider-active-segment"></span>
+    			</div>
+  				</div>
+  				<div class="small-2 medium-1 columns">
+    				<span id="sliderOutput3"></span>
+  				</div>
 			</div>
 
 		</div>
@@ -96,6 +103,7 @@
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/foundation/foundation.js"></script>
+    <script src="js/foundation/foundation.slider.js"></script>
     <script>
       $(document).foundation();
     </script>
