--- a/create.html
+++ b/create.html
@@ -79,7 +79,7 @@
   				<li><a href="#" class="small button">Invite</a></li>
   				<li><a href="#" class="small button">Promote</a></li>
   				<li><a href="#" class="small button" type="reset">Clear</a></li>
-  				<li><a href="signin.html" class="medium alert button">Cancel</a></li>
+  				<li><a href="signIn.html" class="medium alert button">Cancel</a></li>
   				<li><a href="user.html" class="medium success button">Create</a></li>
 			</ul>
 			
