non-functional add photo button, yo

--- a/create.html
+++ b/create.html
@@ -75,9 +75,10 @@
 		<!-- Buttons -->	  
 		<div class="row">
 			
-			<ul class="small-block-grid-5">
+			<ul class="small-block-grid-6">
   				<li><a href="#" class="small button">Invite</a></li>
   				<li><a href="#" class="small button">Promote</a></li>
+  				<li><a href="#" class="small button">Add Photo</a></li>
   				<li><a href="#" class="small button" type="reset">Clear</a></li>
   				<li><a href="signin.html" class="medium alert button">Cancel</a></li>
   				<li><a href="user.html" class="medium success button">Create</a></li>
