clear button works on event page

--- a/create.html
+++ b/create.html
@@ -78,8 +78,8 @@
 			<ul class="small-block-grid-5">
   				<li><a href="#" class="small button">Invite</a></li>
   				<li><a href="#" class="small button">Promote</a></li>
-  				<li><a href="#" class="small button" type="reset">Clear</a></li>
-  				<li><a href="signIn.html" class="medium alert button">Cancel</a></li>
+  				<li><input type="reset" class="small button" value="Clear" /></li>
+  				<li><a href="signin.html" class="medium alert button">Cancel</a></li>
   				<li><a href="user.html" class="medium success button">Create</a></li>
 			</ul>
 			
