--- a/user.html
+++ b/user.html
@@ -36,11 +36,11 @@
 		<!-- Buttons -->	  
 		<div class="row">
 			
-			<ul class="small-block-grid-3">
-  				<li><a href="create.html" class="small button">Create</a></li>
+			<div class="small-block-grid-5">
+			    <li><a href="create.html" class="small button">Create</a></li>
   				<li><a href="view.html" class="small button">View</a></li>
   				<li><a href="#" class="medium alert button">Logout</a></li>
-			</ul>
+			</div>
 			
 			
 			
