--- a/user.html
+++ b/user.html
@@ -37,12 +37,12 @@
 		<div class="row">
 			
 			<div class="small-block-grid-5">
+			<div class="callout panel">
 			    <li><a href="create.html" class="small button">Create</a></li>
   				<li><a href="view.html" class="small button">View</a></li>
   				<li><a href="#" class="medium alert button">Logout</a></li>
+			</div>	
 			</div>
-			
-			
 			
 		</div>
 
