--- a/MapTest.html
+++ b/MapTest.html
@@ -53,17 +53,18 @@
 				<input type="text" placeholder="Enter Event Address Here..." />
 			</div>
 		</div>
-		
-<form>	
-  <fieldset>
-    <legend>Fieldset Legend</legend>
 
-    <label>Input Label
-      <input id ="pac-input"; type="text" placeholder="Inputs and other form elements go inside...">
-    </label>
-  </fieldset>
-</form>
-		
+<div class="maptest">		
+	<form>	
+	<fieldset>
+		<legend>Fieldset Legend</legend>
+
+		<label>Input Label
+		<input id ="pac-input"; type="text" placeholder="Inputs and other form elements go inside...">
+		</label>
+	</fieldset>
+	</form>
+</div>	
 		
 		<!-- Map Code -->	
 		<div class="panel">
