--- a/user.html
+++ b/user.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 	
-    <div class="row">
+      <div class="row">
       <div class="large-12 columns">
       	<div class="panel">
 	        <h2>User Menu</h2>
@@ -35,13 +35,13 @@
 				  
 		<!-- Buttons -->	  
 		<div class="row">
-			
+			<div class = "medium 6 columns">
 			<div class="small-block-grid-5">
 			    <li><a href="create.html" class="small button">Create</a></li>
   				<li><a href="view.html" class="small button">View</a></li>
   				<li><a href="#" class="medium alert button">Logout</a></li>
 			</div>
-			
+			</div>
 			
 			
 		</div>
