--- a/user.html
+++ b/user.html
@@ -38,7 +38,7 @@
 			<div class = "medium 6 columns">
 			<div class="small-block-grid-5">
 			    <li><a href="create.html" class="small button">Create</a></li>
-  				<li><a href="view.html" class="small button">View</a></li>
+  				<li><a href="view.html" class="medium success button">View</a></li>
   				<li><a href="#" class="medium alert button">Logout</a></li>
 			</div>
 			</div>
