add photo buttons on create and view

--- a/view.html
+++ b/view.html
@@ -89,8 +89,9 @@
 		<!-- Buttons -->	  
 		<div class="row">
 			
-			<ul class="small-block-grid-2">
+			<ul class="small-block-grid-3">
   				<li><a href="#" class="medium alert button">Cancel</a></li>
+  				<li><a href="#" class="small button">Add Photo</a></li>
   				<li><a href="#" class="medium success button">Accept Changes</a></li>
 			</ul>
 			
