create-event time

--- a/create.html
+++ b/create.html
@@ -48,6 +48,20 @@
 		</div>
 		
 		<div class="row">
+			<div class="medium-6 columns">
+				<label>Event Start Time</label>
+				<input type="time">
+			</div>
+		</div>		
+
+		<div class="row">
+			<div class="medium-6 columns">
+				<label>Event End Time</label>
+				<input type="time">
+			</div>
+		</div>		
+				
+		<div class="row">
 			<div class="large-12 columns">
 				<label>Event Location</label>
 				<input type="text" placeholder="Enter Event Address Here..." />
