--- a/MapTest.html
+++ b/MapTest.html
@@ -69,7 +69,11 @@
 		<!-- Map Code -->	
 		<div class="panel">
 			<h4>Map Code</h4>
-			<script>
+<div id="googleMap" style="width:500px;height:880px;"></div>
+
+</body>
+		</div>
+<script>
 var myCenter = new google.maps.LatLng(51.508742, -0.120850);
 
 function initialize()
@@ -167,13 +171,12 @@ var searchBox = new google.maps.places.SearchBox((input));
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 </head>
-
 <body>
 <div id="googleMap" style="width:500px;height:880px;"></div>
 
 </body>
-		</div>
-				  
+
+<body> 
 		<!-- Donation Radio Button & Slider -->	
 		<div class="row">
 			<div class="large-6 medium-6 columns">
