--- a/create.html
+++ b/create.html
@@ -49,7 +49,7 @@
 		</div>
 		
 		<div class="row">
-			<div class="medium-6 columns">
+			<div class="medium-6 medium-6 columns">
 				<label>Event Start Time</label>
 				<input type="time">
 				<label>Event End Time</label>
