--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 	        	<div class="large-4 medium-4 columns">
 	        		<h4 class="info-header">Set Ticket Prices</h4>
               <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
-					
-			</div> 
-            	<a href="http://edgardoa.github.io/EventApp/create" class="small radius button">Create</a>     
-			</div>
+					  </div> 
+            <div class="large-4 medium-centered columns">   
+              <a href="http://edgardoa.github.io/EventApp/create" class="small radius button">Create</a>
+            </div>
+			    </div>
       	</div>
       </div>
     </div>
