--- a/MapTest.html
+++ b/MapTest.html
@@ -69,7 +69,8 @@
 		<!-- Map Code -->	
 		<div class="panel">
 			<h4>Map Code</h4>
-<div id="googleMap" style="width:500px;height:880px;"></div>
+		</div>
+		<div id="googleMap" style="width:500px;height:880px;"></div>
 
 </body>
 		</div>
@@ -175,6 +176,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <div id="googleMap" style="width:500px;height:880px;"></div>
 
 </body>
+
 
 <body> 
 		<!-- Donation Radio Button & Slider -->	
