--- a/create.html
+++ b/create.html
@@ -56,9 +56,13 @@
 			<div class="laarge-4 medium-4 columns">
 				<label>Event Start Time</label>
 				<input type="time">
+			</div>
+		</div>
+		
+		<div>
+			<div class="laarge-4 medium-4 columns">	
 				<label>Event End Time</label>
 				<input type="time">
-
 			</div>
 		</div>		
 
