--- a/create.html
+++ b/create.html
@@ -53,14 +53,12 @@
 		</div>
 		
 		<div class="row">
-			<div class="laarge-4 medium-4 columns">
+			<div class="large-4 medium-4 columns">
 				<label>Event Start Time</label>
 				<input type="time">
 			</div>
-		</div>
 		
-		<div>
-			<div class="laarge-4 medium-4 columns">	
+			<div class="large-4 medium-4 columns">	
 				<label>Event End Time</label>
 				<input type="time">
 			</div>
