--- a/create.html
+++ b/create.html
@@ -55,12 +55,12 @@
 		<div class="row">
 			<div class="large-4 medium-4 columns">
 				<label>Event Start Time</label>
-				<input type="time">
+				<input type="time" />
 			</div>
 		
 			<div class="large-4 medium-4 columns">	
 				<label>Event End Time</label>
-				<input type="time">
+				<input type="time" />
 			</div>
 		</div>		
 
