--- a/create.html
+++ b/create.html
@@ -53,12 +53,12 @@
 		</div>
 		
 		<div class="row">
-			<div class="large-4 medium-4 columns">
+			<div class="small-3 small-centered columns">
 				<label>Event Start Time</label>
 				<input type="time" />
 			</div>
 		
-			<div class="large-4 medium-4 columns">	
+			<div class="small-3 small-centered columns">	
 				<label>Event End Time</label>
 				<input type="time" />
 			</div>
