--- a/create.html
+++ b/create.html
@@ -38,7 +38,7 @@
 	<form>
 		<!-- Data Entry -->	
 		<div class="row">
-			<div class="large-12 columns">
+			<div class="medium-12 medium-centered columns">
 				<label>Event Name</label>
 				<input type="text" placeholder="Enter Event Name Here..." />
 			</div>
