--- a/create.html
+++ b/create.html
@@ -38,14 +38,14 @@
 	<form>
 		<!-- Data Entry -->	
 		<div class="row">
-			<div class="medium-12 medium-centered columns">
+			<div class="medium-6 medium-centered columns">
 				<label>Event Name</label>
 				<input type="text" placeholder="Enter Event Name Here..." />
 			</div>
 		</div>
 	
 		<div class="row">
-			<div class="large-12 columns">
+			<div class="large-6 large-centered columns">
 				<label>Event Date</label>
 				<input type="date">
 				
