--- a/MapTest.html
+++ b/MapTest.html
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<label>Event Location</label>
-				<input type="text" placeholder="Enter Event Address Here..." />
+				<input id ="pac-input"; style="position: relative; left: 50px; top: 250px" />
 			</div>
 			<script>
 var myCenter = new google.maps.LatLng(51.508742, -0.120850);
@@ -154,7 +154,7 @@ var searchBox = new google.maps.places.SearchBox((input));
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 </head>
-<div id="googleMap" style="width:500px;height:880px;"></div>
+<div id="googleMap" style="width:75%;height:880px; position: relative; left: 15px;"></div>
 		</div>
 
 		
