--- a/create.html
+++ b/create.html
@@ -38,7 +38,7 @@
 	<form>
 		<!-- Data Entry -->	
 		<div class="row">
-			<div class="medium-6 medium-centered columns">
+			<div class="large-6 large-centered columns">
 				<label>Event Name</label>
 				<input type="text" placeholder="Enter Event Name Here..." />
 			</div>
@@ -53,12 +53,12 @@
 		</div>
 		
 		<div class="row">
-			<div class="small-3 small-centered columns">
+			<div class="large-3 large-centered columns">
 				<label>Event Start Time</label>
 				<input type="time" />
 			</div>
 		
-			<div class="small-3 small-centered columns">	
+			<div class="large-3 large-centered columns">	
 				<label>Event End Time</label>
 				<input type="time" />
 			</div>
@@ -66,7 +66,7 @@
 
 				
 		<div class="row">
-			<div class="large-12 columns">
+			<div class="large-6 large-centered columns">
 				<label>Event Location</label>
 				<input type="text" placeholder="Enter Event Address Here..." />
 			</div>
