--- a/MapTest.html
+++ b/MapTest.html
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<label>Event Location</label>
-				<input id ="pac-input"; style="position: relative; left: 50px; top: 250px" />
+				<input id ="pac-input"; type="text"; style="position: relative; left: 50px; top: 250px" />
 			</div>
 			<script>
 var myCenter = new google.maps.LatLng(51.508742, -0.120850);
