--- a/view.html
+++ b/view.html
@@ -73,7 +73,7 @@
 			
 			
 			<div class="row">
-  				<div class="small-10 medium-11 columns">
+  				<div class="small-8 medium-9 columns">
     			<div class="range-slider" data-slider data-options="display_selector: #sliderOutput3; step: 5;">
       				<span class="range-slider-handle" role="slider" tabindex="0"></span>
       				<span class="range-slider-active-segment"></span>
@@ -82,6 +82,9 @@
   				<div class="small-2 medium-1 columns">
     				<span id="sliderOutput3"></span>
   				</div>
+  				<div class="small-2 columns">
+					<a href="http://edgardoa.github.io/EventApp/payment.html" class="button prefix">Go To Payment</a>
+				</div>
 			</div>
 
 		</div>
