--- a/create.html
+++ b/create.html
@@ -27,7 +27,7 @@
     </div>
 	
     <div class="row">
-      <div class="large-6 columns">
+      <div class="large-6 large-centered columns">
       	<div class="panel">
 	        <h2>Creating an Event</h2>
 	        <p>Please fill out the form below</p>
