--- a/MapTest.html
+++ b/MapTest.html
@@ -128,7 +128,7 @@ var searchBox = new google.maps.places.SearchBox((input));
       // Create a marker for each place.
       var marker = new google.maps.Marker({
         map: map,
-        icon: 'Caduceus-Red.png',  // image
+        icon: 'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png',  // image
         title: place.name,
         position: place.geometry.location
       });
