--- a/about.html
+++ b/about.html
@@ -22,6 +22,15 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="medium-3 columns"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg">Edgardo Angel</div>
+      <div class="medium-9 columns">Eddddyyy is a cool dood.</div>
+    </div>
+    <div class="row">
+      <div class="medium-3 columns"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg">Ishita Mandhan</div>
+      <div class="medium-9 columns">Ishituhhh. She is 2 legit 2 quit.</div>
+    </div>
+
 
  <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
