--- a/MapTest.html
+++ b/MapTest.html
@@ -76,7 +76,7 @@ var mapProp = {
 var map= new google.maps.Map(document.getElementById("googleMap"),mapProp);
   
 //Icon Image
-var marker = new google.maps.Marker({position:myCenter,icon:'Caduceus-Red.png'});
+var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
 
 
 marker.setMap(map);
