--- a/create.html
+++ b/create.html
@@ -55,6 +55,8 @@
 			<div class="large-4 large-centered columns">
 				<label>Event Start Time</label>
 				<input type="time" />
+			</div>
+			<div class="large-4 large-centered columns">
 				<label>Event End Time</label>
 				<input type="time" />
 			</div>
