--- a/create.html
+++ b/create.html
@@ -66,8 +66,109 @@
 		<div class="row">
 			<div class="large-8 large-centered columns">
 				<label>Event Location</label>
-				<input type="text" placeholder="Enter Event Address Here..." />
+				<input id ="pac-input"; type="text"; />
 			</div>
+<script>
+var myCenter = new google.maps.LatLng(51.508742, -0.120850);
+
+function initialize()
+{
+
+var Payment_Amount = 100;
+var mapProp = {
+  center:myCenter,
+  zoom:9,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  
+  //mapTypeId:google.maps.MapTypeId.HYBRID
+  //mapTypeId:google.maps.MapTypeId.SATELLITE
+  //mapTypeId:google.maps.MapTypeId.HYBRID
+  //mapTypeId:google.maps.MapTypeId.TERRAIN
+  };
+var map= new google.maps.Map(document.getElementById("googleMap"),mapProp);
+  
+//Icon Image
+var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
+
+
+marker.setMap(map);
+
+//Marker-Icon Image
+var infowindow = new google.maps.InfoWindow({content:"We can put info of the event here as well!"});
+infowindow.open(map,marker);
+
+//Info Window that opens when clicking on marker
+
+//var infowindowClick = new google.maps.InfoWindow({content:"Or we can do it by cliking on marker"});
+
+var infowindowClick = new google.maps.InfoWindow({content:"Or we can do it by cliking on marker"}); // background-color = #B2D1FF, max-width = 80, max-height = 120}
+
+//Open on click
+
+google.maps.event.addListener(marker, 'click', function() {infowindowClick.open(map,marker);});
+
+
+//Search Box
+
+var markers = [];
+var input =(document.getElementById('pac-input'));
+
+var searchBox = new google.maps.places.SearchBox((input));
+
+ google.maps.event.addListener(searchBox, 'places_changed', function() {
+    var places = searchBox.getPlaces();
+
+    if (places.length == 0) {
+      return;
+    }
+    for (var i = 0, marker; marker = markers[i]; i++) {
+      marker.setMap(null);
+    }
+
+    // For each place, get the icon, place name, and location.
+    markers = [];
+    var bounds = new google.maps.LatLngBounds();
+    for (var i = 0, place; place = places[i]; i++) {
+      var image = {
+        url: place.icon,
+        size: new google.maps.Size(24, 24),
+        origin: new google.maps.Point(20, 20),
+        anchor: new google.maps.Point(17, 34),
+        scaledSize: new google.maps.Size(25, 25)
+      };
+
+      // Create a marker for each place.
+      var marker = new google.maps.Marker({
+        map: map,
+        icon: 'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png',  // image
+        title: place.name,
+        position: place.geometry.location
+      });
+
+      markers.push(marker);
+
+      bounds.extend(place.geometry.location);
+	  zoom: 9;
+    }
+
+    map.fitBounds(bounds);
+  });
+
+  // Bias the SearchBox results towards places that are within the bounds of the
+  // current map's viewport.
+  google.maps.event.addListener(map, 'bounds_changed', function() {
+    var bounds = map.getBounds();
+    searchBox.setBounds(bounds);
+  });
+
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+</head>
+<div id="googleMap" style="width:75%;height:880px; position: relative; left: 15px;"></div>
+		</div>
+
 		</div>
 		
 		
