--- a/about.html
+++ b/about.html
@@ -15,21 +15,21 @@
       </a>
       <div class="nav-menu">
         <ul class="nav-buttons">
-          <li class="home-button"><a href=#>Home</a></li>
-          <li class="about-button"><a href="http://edgardoa.github.io/EventApp/#">About</a></li>
+          <li class="home-button"><a href="http://edgardoa.github.io/EventApp/index">Home</a></li>
+          <li class="about-button"><a href=#>About</a></li>
           <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
         </ul>
       </div>
     </div>
 
     <div class="row">
-      <div class="medium-3 columns"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg"></div>
-      <div class="medium-9 columns">Edgardo Angel </br> Eddddyyy is a cool dood.</div>
+      <div class="medium-3 columns bio"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg">Edgardo Angel</div>
+      <div class="medium-9 columns">Eddddyyy is a cool dood.</div>
     </div>
     </br>
     <div class="row">
-      <div class="medium-3 columns"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg"></div>
-      <div class="medium-9 columns">Ishita Mandhan </br> Ishituhhh. She is 2 legit 2 quit.</div>
+      <div class="medium-3 columns bio"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg">Ishita Mandhan</div>
+      <div class="medium-9 columns">Ishituhhh. She is 2 legit 2 quit.</div>
     </div>
 
 
