--- a/create.html
+++ b/create.html
@@ -53,12 +53,14 @@
 		
 		<div class="row">
 			<div class="large-4 large-centered columns">
-				<label>Event Start Time</label>
+				<label>Event Start Time
 				<input type="time" />
+				</label>
 			</div>
 			<div class="large-4 large-centered columns">
-				<label>Event End Time</label>
+				<label>Event End Time
 				<input type="time" />
+				</label>
 			</div>
 		</div>		
 
