--- a/create.html
+++ b/create.html
@@ -51,18 +51,18 @@
 			</div>
 		</div>
 		
-		<div class="row">
-			<div class="large-4 large-centered columns">
+		<ul class="row">
+			<li class="large-4 large-centered columns">
 				<label>Event Start Time
 				<input type="time" />
 				</label>
-			</div>
-			<div class="large-4 large-centered columns">
+			</li>
+			<li class="large-4 large-centered columns">
 				<label>Event End Time
 				<input type="time" />
 				</label>
-			</div>
-		</div>		
+			</li>
+		</ul>		
 
 				
 		<div class="row">
