--- a/about.html
+++ b/about.html
@@ -23,13 +23,22 @@
     </div>
 
     <div class="row">
-      <div class="medium-3 columns bio"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg">Edgardo Angel</div>
+      <div class="medium-3 columns bio">Edgardo Angel<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg"></div>
       <div class="medium-9 columns">Eddddyyy is a cool dood.</div>
     </div>
     </br>
     <div class="row">
-      <div class="medium-3 columns bio"><img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg">Ishita Mandhan</div>
+      <div class="medium-3 columns bio">Ishita Mandhan<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg"></div>
       <div class="medium-9 columns">Ishituhhh. She is 2 legit 2 quit.</div>
+    </div>
+     <div class="row">
+      <div class="medium-3 columns bio">Sergio Avedillo<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/sergio.jpg"></div>
+      <div class="medium-9 columns">The Suuuurggge. Watch out, he's a boss.</div>
+    </div>
+    </br>
+    <div class="row">
+      <div class="medium-3 columns bio">Ross Hudgins<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/RossCat.jpg"></div>
+      <div class="medium-9 columns">Ross. He's a drummer and has a beard. Shutup.</div>
     </div>
 
 
