--- a/create.html
+++ b/create.html
@@ -19,7 +19,7 @@
       </a>
       <div class="nav-menu">
         <ul class="nav-buttons">
-          <li class="home-button"><a href=#>Home</a></li>
+          <li class="home-button"><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
           <li class="about-button"><a href="http://edgardoa.github.io/EventApp/About">About</a></li>
           <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
         </ul>
