--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
       <div class="medium-3 columns bio">Ishita Mandhan<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg"></div>
       <div class="medium-9 columns">Ishituhhh. She is 2 legit 2 quit.</div>
     </div>
+    </br>
      <div class="row">
       <div class="medium-3 columns bio">Sergio Avedillo<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/sergio.jpg"></div>
       <div class="medium-9 columns">The Suuuurggge. Watch out, he's a boss.</div>
@@ -39,6 +40,11 @@
     <div class="row">
       <div class="medium-3 columns bio">Ross Hudgins<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/RossCat.jpg"></div>
       <div class="medium-9 columns">Ross. He's a drummer and has a beard. Shutup.</div>
+    </div>
+    </br>
+    <div class="row">
+      <div class="medium-3 columns bio">Sarah Vance<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/RossCat.jpg"></div>
+      <div class="medium-9 columns">Uhmm.. have you met me? I'm cool. 'Nough said.</div>
     </div>
 
 
