--- a/create.html
+++ b/create.html
@@ -51,18 +51,18 @@
 			</div>
 		</div>
 		
-		<ul class="row">
-			<li class="large-4 large-centered columns">
+		<div class="row">
+			<div class="large-4 large-centered columns">
 				<label>Event Start Time
 				<input type="time" />
 				</label>
-			</li>
-			<li class="large-4 large-centered columns">
+			</div>
+			<div class="large-4 large-centered columns">
 				<label>Event End Time
 				<input type="time" />
 				</label>
-			</li>
-		</ul>		
+			</div>
+				
 
 				
 		<div class="row">
