--- a/create.html
+++ b/create.html
@@ -52,12 +52,12 @@
 		</div>
 		
 		<div class="row">
-			<div class="large-4 large-centered columns">
+			<div class="large-4 columns">
 				<label>Event Start Time
 				<input type="time" />
 				</label>
 			</div>
-			<div class="large-4 large-centered columns">
+			<div class="large-4 columns">
 				<label>Event End Time
 				<input type="time" />
 				</label>
