--- a/create.html
+++ b/create.html
@@ -52,6 +52,8 @@
 		</div>
 		
 		<div class="row">
+			<div class="large-2 large-centered columns">
+			</div>
 			<div class="large-4 large-centered columns">
 				<label>Event Start Time
 				<input type="time" />
@@ -61,6 +63,8 @@
 				<label>Event End Time
 				<input type="time" />
 				</label>
+			</div>
+			<div class="large-2 large-centered columns">
 			</div>
 		</div>				
 
