--- a/create.html
+++ b/create.html
@@ -52,19 +52,16 @@
 		</div>
 		
 		<div class="row">
-			<div class="large-2 large-centered columns">
-			</div>
-			<div class="large-4 large-centered columns">
+
+			<div class="small-4 small-centered columns">
 				<label>Event Start Time
 				<input type="time" />
 				</label>
 			</div>
-			<div class="large-4 large-centered columns">
+			<div class="small-4 small-centered columns">
 				<label>Event End Time
 				<input type="time" />
 				</label>
-			</div>
-			<div class="large-2 large-centered columns">
 			</div>
 		</div>				
 
