--- a/create.html
+++ b/create.html
@@ -53,12 +53,12 @@
 		
 		<div class="row">
 
-			<div class="small-4 small-centered columns">
+			<div class = "two columns centered">
+				
 				<label>Event Start Time
 				<input type="time" />
 				</label>
-			</div>
-			<div class="small-4 small-centered columns">
+
 				<label>Event End Time
 				<input type="time" />
 				</label>
