--- a/create.html
+++ b/create.html
@@ -55,10 +55,12 @@
 
 			<div class = "two columns centered">
 				
+			<div class="small-4 columns time">
 				<label>Event Start Time
 				<input type="time" />
 				</label>
-
+			</div>
+			<div class="small-4 columns time">
 				<label>Event End Time
 				<input type="time" />
 				</label>
