--- a/create.html
+++ b/create.html
@@ -52,7 +52,8 @@
 		</div>
 		
 		<div class="row">
-				
+			<div class="small-2 columns time">
+			</div>				
 			<div class="small-4 columns time">
 				<label>Event Start Time
 				<input type="time" />
