--- a/create.html
+++ b/create.html
@@ -49,12 +49,12 @@
 				<label>Event Date</label>
 				<input type="date">
 		
-			<div class="small-4 columns time">
+			<div class="large-4 columns time">
 				<label>Event Start Time
 				<input type="time" />
 				</label>
 			</div>
-			<div class="small-4 columns time">
+			<div class="large-4 columns time">
 				<label>Event End Time
 				<input type="time" />
 				</label>
