Image Button Map

--- a/MapTest.html
+++ b/MapTest.html
@@ -71,7 +71,8 @@
 				<input id ="pac-input"; type="text"; />
 		</div>
 		<div class"row">
-			<button class="ringIcons" id = "Rings">
+			<a herf="#" class="ringIcons" id="Rings"></a>
+
 		</div>			
 <script>
 
