--- a/create.html
+++ b/create.html
@@ -174,7 +174,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 				  
 		<!-- Donation Radio Button & Slider -->	
 		<div class="row">
-			<div class="large-6 medium-6 columns">
+			<div class="large-6 large-centered medium-6 medium-centered columns">
 				<label>Accept Donations</label>
 				<input type="radio" name="donation" value="Yes" id="donationYes"><label for="donationYes">Yes</label>
 				<input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
