--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
 	
     <div class="row">
-      <div class="large-9 large-centered columns">
+      <div class="large-9 columns">
       	<div class="panel">
 	        <h2>Get Ready To Host The Best Event EVER</h2>
 	        <p>Your one stop site made to make you the greatest event host around.</p><br/>
 	        <div class="row">
-	        	<div class="large-3 large-centered medium-3 medium-centered columns">
+	        	<div class="large-3 medium-3 columns">
 	    		   <h4 class="info-header">Create An Event</h4>
              <p>Set the time, date, and location of your event. You even have the option to display a Google map to your event so your guests have no excuse not to come!</p>
 	    	    </div>
