--- a/viewTest.html
+++ b/viewTest.html
@@ -70,7 +70,10 @@ function showUser(str) {
 		
 		
 	</script>
-		
+
+	
+<body onload="showUser(2)">
+	
       	<div class="panel">
 	        <h2>View Event</h2>
 	        <p>View the event you were invited to</p>
