--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="nav-buttons">
           <li class="home-button"><a href=#>Home</a></li>
           <li class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a></li>
+          <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
           <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
         </ul>
       </div>
