--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <div class="nav-menu">
         <ul class="nav-buttons">
           <li class="home-button"><a href=#>Home</a></li>
-          <li class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a></li>
           <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
           <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
         </ul>
@@ -49,7 +48,11 @@
       </div>
     </div>  
 
-    <a href="http://foundation.zurb.com/docs/" class="small button">Foundation Documentation</a>          
+    <a href="http://foundation.zurb.com/docs/" class="small button">Foundation Documentation</a>    
+
+    <div class="footer">
+       <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
+    </div>      
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
