workin on login form

--- a/create.html
+++ b/create.html
@@ -315,7 +315,7 @@
  <div id="myModal" class="reveal-modal" data-reveal>
    <h2>Create Promotional Tweet</h2>
    <p>Tweet promoting event...</p>
-   <a class="close-reveal-modal">&#215;</a>
+   <a id="myModal" class="close-reveal-modal">&#215;</a>
  </div>
 
 </li>
