--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         <ul class="nav-buttons">
           <li class="home-button"><a href=#>Home</a></li>
           <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
-          <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
+          <li><button class="small button" data-reveal-id="LoginModal">Promote</button>
+           <div id="LoginModal" class="reveal-modal" data-reveal>
+             <form>
+              <div class="row">
+                
+              </div>
+             </form>
+             <a class="close-reveal-modal">&#215;</a>
+           </div>
+          </li>
         </ul>
       </div>
     </div>
