--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-buttons">
           <li class="home-button"><a href=#>Home</a></li>
           <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
-          <li data-reveal-id="LoginModal">Log In
+          <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
            <div id="LoginModal" class="reveal-modal" data-reveal>
              <form>
               <div class="row">
