--- a/create.html
+++ b/create.html
@@ -20,9 +20,17 @@
   <div class="nav-menu">
     <ul class="nav-buttons">
       <li class="home-button"><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
-      <li class="about-button"><a href="http://edgardoa.github.io/EventApp/About">About</a></li>
       <li class="create-button"><a href=#>Create</a></li>
-      <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
+      <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
+           <div id="LoginModal" class="reveal-modal" data-reveal>
+             <form>
+              <div class="row">
+
+              </div>
+             </form>
+             <a class="close-reveal-modal">&#215;</a>
+           </div>
+          </li>
     </ul>
   </div>
 </div>
