--- a/about.html
+++ b/about.html
@@ -1,60 +1,73 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EventUs</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <script src="js/vendor/modernizr.js"></script>
-  </head>
-    
-    <div class="header">
-      <a href="http://edgardoa.github.io/EventApp/"> 
-        <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
-      </a>
-      <div class="nav-menu">
-        <ul class="nav-buttons">
-          <li class="home-button"><a href="http://edgardoa.github.io/EventApp/index">Home</a></li>
-          <li class="about-button"><a href=#>About</a></li>
-          <li class="signIn-button"><a href="http://edgardoa.github.io/EventApp/signIn">Sign In</a></li>
-        </ul>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EventUs</title>
+  <link rel="stylesheet" href="css/foundation.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <script src="js/vendor/modernizr.js"></script>
+</head>
+
+<div class="header">
+  <a href="http://edgardoa.github.io/EventApp/"> 
+    <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
+  </a>
+  <div class="nav-menu">
+    <ul class="nav-buttons">
+      <li class="home-button"><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
+      <li class="create-button"><a href=#>Create</a></li>
+      <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
+       <div id="LoginModal" class="reveal-modal" data-reveal>
+         <form>
+          <div class="row">
+
+          </div>
+        </form>
+        <a class="close-reveal-modal">&#215;</a>
       </div>
-    </div>
+    </li>
+  </ul>
+</div>
+</div>
 
-    <div class="row">
-      <div class="medium-3 columns bio">Edgardo Angel<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg"></div>
-      <div class="medium-9 columns"></br>Eddddyyy is a cool dood.</div>
-    </div>
-    </br>
-    <div class="row">
-      <div class="medium-3 columns bio">Ishita Mandhan<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg"></div>
-      <div class="medium-9 columns"></br>Ishituhhh. She is 2 legit 2 quit.</div>
-    </div>
-    </br>
-     <div class="row">
-      <div class="medium-3 columns bio">Sergio Avedillo<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/sergio.jpg"></div>
-      <div class="medium-9 columns"></br>The Suuuurggge. Watch out, he's a boss.</div>
-    </div>
-    </br>
-    <div class="row">
-      <div class="medium-3 columns bio">Ross Hudgins<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/RossCat.jpg"></div>
-      <div class="medium-9 columns"></br>Ross. He's a drummer and has a beard. Shutup.</div>
-    </div>
-    </br>
-    <div class="row">
-      <div class="medium-3 columns bio">Sarah Vance<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/sarah.jpg"></div>
-      <div class="medium-9 columns"></br>Uhmm.. have you met me? I'm cool. 'Nough said.</div>
-    </div>
-    </br>
-    </br>
+<div class="row">
+  <div class="medium-3 columns bio">Edgardo Angel<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/Ed.jpg"></div>
+  <div class="medium-9 columns"></br>Eddddyyy is a cool dood.</div>
+</div>
+</br>
+<div class="row">
+  <div class="medium-3 columns bio">Ishita Mandhan<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/ishita.jpg"></div>
+  <div class="medium-9 columns"></br>Ishituhhh. She is 2 legit 2 quit.</div>
+</div>
+</br>
+<div class="row">
+  <div class="medium-3 columns bio">Sergio Avedillo<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/sergio.jpg"></div>
+  <div class="medium-9 columns"></br>The Suuuurggge. Watch out, he's a boss.</div>
+</div>
+</br>
+<div class="row">
+  <div class="medium-3 columns bio">Ross Hudgins<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/RossCat.jpg"></div>
+  <div class="medium-9 columns"></br>Ross. He's a drummer and has a beard. Shutup.</div>
+</div>
+</br>
+<div class="row">
+  <div class="medium-3 columns bio">Sarah Vance<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/sarah.jpg"></div>
+  <div class="medium-9 columns"></br>Uhmm.. have you met me? I'm cool. 'Nough said.</div>
+</div>
+</br>
+</br>
 
- <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+<script src="js/vendor/jquery.js"></script>
+<script src="js/foundation.min.js"></script>
+<script>
+$(document).foundation();
+</script>
+</body>
+
+<div class="footer">
+ <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
+</div>    
+
 </html>
 
-    
