--- a/create.html
+++ b/create.html
@@ -22,17 +22,17 @@
       <li class="home-button"><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
       <li class="create-button"><a href=#>Create</a></li>
       <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
-           <div id="LoginModal" class="reveal-modal" data-reveal>
-             <form>
-              <div class="row">
+       <div id="LoginModal" class="reveal-modal" data-reveal>
+         <form>
+          <div class="row">
 
-              </div>
-             </form>
-             <a class="close-reveal-modal">&#215;</a>
-           </div>
-          </li>
-    </ul>
-  </div>
+          </div>
+        </form>
+        <a class="close-reveal-modal">&#215;</a>
+      </div>
+    </li>
+  </ul>
+</div>
 </div>
 
 <div class="row">
@@ -338,7 +338,9 @@
 </ul>	
 </div>
 
-
+ <div class="footer">
+  <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
+</div>    
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
